# realsense-demo

./: .fid  .gitignore  CMakeLists.txt  README.md  quicksort.py
.github/workflows/: fid-assistant.yml
src/: DepthCamera.cpp  DepthCamera.h  DepthCameraService.cpp  DepthCameraService.h  IntelRealSense.cpp  IntelRealSense.h  intel_real_sense_boost_test.cpp  intel_real_sense_gtest.cpp  main.cpp
tests/: intel_real_sense_boost_test.cpp
